ethereum-2/kube-state-metrics/svc-kube-state-metrics.yaml
apiVersion: v1
kind: Service
metadata:
  name: kube-state-metrics
  namespace: ethereum-2
  labels:
    app.kubernetes.io/name: kube-state-metrics
spec:
  clusterIP: None
  selector:
    app.kubernetes.io/name: kube-state-metrics
  ports:
  - name: metrics
    port: 8080
    targetPort: metrics
  - name: telemetry
    port: 8081
    targetPort: telemetry
