ethereum-2/kube-state-metrics/np-kube-state-metrics.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kube-state-metrics
  namespace: ethereum-2
  labels:
    app.kubernetes.io/name: kube-state-metrics
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: kube-state-metrics
  policyTypes:
  - Ingress
  ingress:
  # allow prometheus to scrape the metrics endpoint
  - from:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: prometheus
    ports:
    - protocol: TCP
      port: 8080
